name:                heed-export
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              nboldi
maintainer:          nboldi@elte.hu
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Language.Haskell.Heed.Export.Export
                   Language.Haskell.Heed.Export.Modules
                   Language.Haskell.Heed.Export.Declarations
                   Language.Haskell.Heed.Export.Bindings
                   Language.Haskell.Heed.Export.Expressions
                   Language.Haskell.Heed.Export.Patterns
                   Language.Haskell.Heed.Export.Names
                   Language.Haskell.Heed.Export.Literals
                   Language.Haskell.Heed.Export.Lexical
                   Language.Haskell.Heed.Export.Types
                   Language.Haskell.Heed.Export.Templates
                   Language.Haskell.Heed.Export.Kinds
                   Language.Haskell.Heed.Export.Statements
                   Language.Haskell.Heed.Export.Utilities
                   Language.Haskell.Heed.Export.Schema
  build-depends:   base >=4.10 && <4.11
                 , ghc
                 , ghc-paths
                 , mtl
                 , selda
                 , directory
                 , containers
                 , heed-core
                 , selda
                 , selda-sqlite
                 , bytestring
                 , text
                 , template-haskell
  default-language:    Haskell2010

executable heed-export
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11
                     , ghc
                     , ghc-paths
                     , mtl
                     , selda
                     , selda-sqlite
                     , containers
                     , heed-core
                     , text
                     , heed-export
  hs-source-dirs: exe
  default-language: Haskell2010

test-suite heed-export-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base >=4.10 && <4.11
                     , tasty
                     , tasty-hunit
                     , heed-export
  hs-source-dirs: test
  default-language: Haskell2010

